# obsim

./: Cargo.toml  LICENSE-MIT  README.md  sim_params.tex
.github/workflows/: ci.yml  rustdoc.yml
examples/: binned.rs  combined.rs  simple.rs
src/: case.rs  disease.rs  genome.rs  lib.rs
src/disease/: covid.rs  simple.rs
src/genome/: simple.rs
src/simulate/: binned.rs  mod.rs  outbreak.rs
