[package]
name = "obsim"
version = "0.2.2"
edition = "2021"
authors = ["Carl Suster <Carl.Suster@health.nsw.gov.au>"]
description = "Outbreak simulation based on a branching process"
license = "MIT OR Apache-2.0"
categories = ["science"]

[dependencies]
bitvec = "1"
rand = "0.8"
rand_distr = "0.4"
thiserror = "1"

[dev-dependencies]
rand_xoshiro = "0.6"
anyhow = "*"
